Fix no-scroll behavior on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@ body {
   color: white;
   height: 100svh;
   font-family: sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body,
